tests/snapshots/examples_fixtures/type_system__failing__119_fn_missing_parens.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/119_fn_missing_parens.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Function Parameter List

This function declaration needs a parameter list after `foo`.

  examples/type_system/failing/119_fn_missing_parens.flx:23:8
   |
23 | fn foo -> Int { 1 }
   |        ^^

Note:
  while parsing function `foo`

Help:
  Try `fn foo()` or `fn foo(x: Type)`.
== stdout ==
<not executed>
